--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pagseguro/php",
+    "name": "maicoqb/pagseguro-php",
     "description": "Biblioteca de integração com o PagSeguro",
     "license": "Apache License 2.0",
     "autoload": {
